Update DiscountCalculatorTest.java
Optimized the code logic based on updates from other team members --- Boyuan Feng